--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@
 
  header {
      position: relative;
+     overflow: hidden;
      background-image: url('../imgs/banner-home.png');
      background-size: cover;
      background-position: center;
@@ -31,10 +32,14 @@
 
  footer {
      width: 100%;
-     height: 70vh;
+     height: 60vh;
      background-image: url('../imgs/footer.png');
      background-size: cover;
      background-repeat: no-repeat;
+     display: flex;
+     color: #fff;
+     justify-content: space-between;
+     flex-direction: column;
  }
 
  .transition {
@@ -61,4 +66,8 @@
 
  .active {
      border-bottom: 3px solid #fdb93c !important;
+ }
+
+ .modal-body {
+     height: 90vh;
  }
