--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,7 @@
      justify-content: space-evenly;
      width: 100%;
      color: #fff;
+
  }
 
  .area-left,
@@ -171,6 +172,7 @@
  .area-products {
      width: 100%;
      min-height: 600px;
+
  }
 
  #carroselProducts {
@@ -178,13 +180,14 @@
      justify-content: space-evenly;
      flex-wrap: wrap;
      align-items: center;
+
  }
 
  .item-product {
      position: relative;
      z-index: 100;
      width: 580px;
-     height: 400px;
+     height: max-content;
      overflow: hidden;
      box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
      border-radius: 10px;
@@ -196,33 +199,39 @@
      position: relative;
      z-index: 100;
      display: flex;
-     align-items: center;
+     align-items: flex-start;
      width: 100%;
-     height: 90%;
+     height: 80%;
      justify-content: space-between;
      padding: 20px;
-
  }
 
  .title-product {
      text-align: left;
-     margin-bottom: 30px;
-     margin-top: 30px;
+     margin-bottom: 20px;
+
  }
 
  .area-description-product {
      padding: 20px;
      text-align: justify;
-     width: 20vw;
+     width: 290px;
+     height: 350px;
+     overflow: hidden;
+     mask-image: linear-gradient(to bottom, black 70%, transparent 100%);
+     -webkit-mask-image: linear-gradient(to bottom, black 70%, transparent 100%);
  }
 
  .area-photo {
      width: 250px;
-     height: 90%;
+     height: 100%;
+     display: flex;
+     justify-content: center;
+     align-items: center;
  }
 
  .area-photo img {
-     width: 100%;
+     width: 90%;
  }
 
  .ball-back {
@@ -243,7 +252,6 @@
      min-height: 600px;
      height: max-content;
      background-color: #fff !important;
-
  }
 
  .area-email-footer {
