--- a/css/index.css
+++ b/css/index.css
@@ -19,13 +19,27 @@
      justify-content: space-evenly;
      width: 100%;
      color: #fff;
+ }
 
+ .area-form-insti {
+     display: flex;
+     align-items: center;
+     justify-content: space-evenly;
+     width: 100%;
+     height: 90% !important;
+     color: #fff;
  }
 
  .area-left,
  .area-right {
      width: 50%;
      height: 600px;
+ }
+
+ .area-left-inst,
+ .area-right-inst {
+     width: 50%;
+     height: 100%;
  }
 
  .area-home-options {
@@ -255,18 +269,18 @@
  }
 
  .area-email-footer {
-
-     height: max-content;
      background-color: #fff !important;
      border-radius: 10px;
      box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
      height: 100% !important;
      overflow: hidden;
+     width: 650px !important;
  }
 
  .area-email-footer form {
      margin: 0px auto;
      width: 75%;
+
  }
 
  .back-ground-email {
