--- a/css/responsives.css
+++ b/css/responsives.css
@@ -572,20 +572,18 @@
          padding: 20px;
      }
 
-
-
      .title-product {
          margin-top: 15px;
          margin-bottom: 20px;
          text-align: left;
          width: 100% !important;
-
      }
 
      .area-description-product {
          padding: 0px;
          text-align: justify;
          width: 100%;
+         height: 30vh !important;
      }
 
      .area-photo {
@@ -594,7 +592,6 @@
          display: flex;
          justify-content: center;
          align-items: center;
-
      }
 
      .area-photo img {
@@ -825,7 +822,6 @@
          overflow: hidden;
          width: 90% !important;
          border: 1px solid rgb(195, 195, 195);
-
          background-image: url("../imgs/email_background.png");
          background-size: cover;
          background-repeat: no-repeat;
@@ -836,16 +832,15 @@
      .area-email-footer form {
          margin: 0px auto;
          width: 100% !important;
-
      }
 
 
      footer {
          width: 100%;
          height: max-content;
-         background-image: url('../imgs/footer.png');
+         background-image: url('../imgs/footer_mobile.png');
          justify-content: space-between;
-         background-size: cover;
+         background-size: contain;
          background-repeat: no-repeat;
          display: flex;
          color: #fff;
