--- a/css/responsives.css
+++ b/css/responsives.css
@@ -50,12 +50,30 @@
          opacity: 0 !important;
      }
 
+     .sub-title-institu {
+         text-align: justify !important;
+         font-size: 1.3em;
+     }
+
+     .title-insti {
+         display: block !important;
+     }
+
+     .title-insti-mobile {
+         display: none !important;
+     }
  }
 
 
 
  /* Estilos para tablets */
  @media (min-width: 577px) and (max-width: 991px) {
+
+
+     .sub-title-institu {
+         text-align: justify !important;
+         font-size: 1.3em;
+     }
 
      .carousel-item .sub-title {
          text-align: justify !important;
@@ -281,6 +299,7 @@
          width: 100%;
          height: 100%;
          margin: 0 auto;
+
      }
 
      .area-right-inst {
@@ -316,6 +335,14 @@
          display: block !important;
          visibility: hidden !important;
          opacity: 0 !important;
+     }
+
+     .title-insti {
+         display: block !important;
+     }
+
+     .title-insti-mobile {
+         display: none !important;
      }
 
  }
@@ -901,18 +928,20 @@
          height: 90% !important;
          color: #fff;
          text-align: center;
+
      }
 
      .area-left-inst {
          width: 100%;
          height: 100%;
          margin: 0 auto;
-
+        
      }
 
      .area-right-inst {
          width: 100%;
          height: 100%;
+     
      }
 
      .area-logo-institucional {
@@ -977,7 +1006,7 @@
          margin-right: 10px;
      }
 
-     .carousel-item {
+     .carousel-item-mobile {
          width: 100% !important;
          height: 210px !important;
          border-radius: 10px !important;
@@ -995,5 +1024,17 @@
 
      }
 
+     .sub-title-institu {
+         text-align: justify !important;
+         font-size: 1.2em;
+     }
+
+     .title-insti {
+         display: none !important;
+     }
+
+     .title-insti-mobile {
+         display: block !important;
+     }
 
  }
