--- a/css/index.css
+++ b/css/index.css
@@ -143,7 +143,7 @@
      height: 60%;
      overflow: hidden;
      text-align: center !important;
-    
+
  }
 
  .invisible-div {
@@ -470,6 +470,11 @@
      z-index: 5;
      opacity: 1 !important;
      display: block !important;
+ }
+
+ .area-navegation-footer div a {
+     text-decoration: none !important;
+     color: #fff !important;
  }
 
  /* HOVERS */
