--- a/css/responsives.css
+++ b/css/responsives.css
@@ -1,5 +1,10 @@
  /* Estilos para desktops */
  @media (min-width: 992px) {
+     .area-navegation-footer div a {
+         text-decoration: none !important;
+         color: #fff !important;
+     }
+
      .hidden-obscure {
          display: none;
      }
@@ -69,6 +74,10 @@
  /* Estilos para tablets */
  @media (min-width: 577px) and (max-width: 991px) {
 
+     .area-navegation-footer div a {
+         text-decoration: none !important;
+         color: #fff !important;
+     }
 
      .sub-title-institu {
          text-align: justify !important;
@@ -349,6 +358,11 @@
 
  /* Estilos para celulares */
  @media (max-width: 576px) {
+     .area-navegation-footer div a {
+         text-decoration: none !important;
+         color: #fff !important;
+     }
+
      .carousel-item .sub-title {
          text-align: justify !important;
      }
@@ -935,13 +949,13 @@
          width: 100%;
          height: 100%;
          margin: 0 auto;
-        
+
      }
 
      .area-right-inst {
          width: 100%;
          height: 100%;
-     
+
      }
 
      .area-logo-institucional {
